# ai_draft_bot

./: .gitignore  AGENTS.md  API_README.md  CLAUDE.md  DOCUMENTATION_INDEX.md  Dockerfile  EOE_SETUP_PROGRESS.md  IMPROVEMENTS.md  IMPROVEMENTS_ROADMAP_ARCHIVED.md  LSTM_README.md  OPTIMIZATIONS_COMPLETE.md  OPTIMIZATION_ROADMAP.md  PROJECT_REVIEW.md  QUICK_WINS_IMPLEMENTED.md  README.md  SCRYFALL_IMPLEMENTATION.md  USE_CASE_SPECIFICATION.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
configs/: archetype_defaults.json
examples/: scryfall_example.py
scripts/: benchmark.py  cache_scryfall.py  compute_card_stats.py  convert_17l_csv_to_jsonl.py  serve.py  setup_eoe.sh  train.py  train_lstm.py
src/ai_draft_bot/: __init__.py  cli.py  config.py
src/ai_draft_bot/api/: __init__.py  models.py  server.py
src/ai_draft_bot/data/: ingest_17l.py  scryfall_client.py
src/ai_draft_bot/explainability/: __init__.py  shap_explainer.py
src/ai_draft_bot/features/: archetypes.py  card_text.py  draft_context.py  draft_state.py  opponent_model.py  positional.py  synergies.py
src/ai_draft_bot/models/: advanced_drafter.py  drafter.py  ensemble_drafter.py  neural_drafter.py
src/ai_draft_bot/models/sequence/: __init__.py  embeddings.py  lstm_drafter.py
src/ai_draft_bot/optimization/: __init__.py  optuna_tuner.py
src/ai_draft_bot/utils/: __init__.py  cache.py  logging_config.py  metrics.py  splits.py
tests/: test_api.py  test_feature_dimensions.py  test_utils.py
