[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-draft-bot"
version = "0.1.0"
description = "Baseline tooling to train and simulate draft pick strategies from 17L data."
authors = [{ name = "AI Assistant" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "scikit-learn>=1.4.0",
    "typer>=0.12.3",
    "joblib>=1.3.0",
    "xgboost>=2.0.0",
    "lightgbm>=4.0.0",
    "torch>=2.0.0",
    "optuna>=3.5.0",
    "shap>=0.44.0",
    "nltk>=3.8.0",
    "scryfallsdk>=1.8.0",
    "sentence-transformers>=2.2.0",
    "transformers>=4.35.0",
    "mlflow>=2.9.0",
    "fastapi>=0.108.0",
    "uvicorn>=0.25.0",
    "pydantic>=2.5.0",
    "requests>=2.31.0",
    "tqdm>=4.66.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4.0",
    "mypy>=1.8.0",
    "pytest>=7.4.0",
]

[tool.ruff]
line-length = 100
src = ["src", "scripts"]

[tool.ruff.lint]
select = ["E", "F", "I", "B"]

[tool.mypy]
python_version = "3.10"
strict = true
show_error_codes = true
warn_unused_configs = true
mypy_path = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
